exports[`Pure functions suite test TopMenuData added Icon element to topMenuData 1`] = `
Array [
  Array [
    "tasks",
    Object {
      "data": Object {
        "actionDropDown": Object {},
        "classStyles": Object {
          "aClassName": "dropdown-toggle",
          "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-task "
        },
        "iconName": "icon-bell",
        "key": "tasks",
        "notice": Object {}
      }
    }
  ],
  Array [
    "inbox",
    Object {
      "data": Object {
        "actionDropDown": Object {},
        "classStyles": Object {
          "aClassName": "dropdown-toggle",
          "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-inbox "
        },
        "iconName": "icon-envelope-open",
        "key": "inbox",
        "notice": Object {}
      }
    }
  ],
  Array [
    "notifications",
    Object {
      "data": Object {
        "actionDropDown": Object {},
        "classStyles": Object {
          "aClassName": "dropdown-toggle",
          "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-notification"
        },
        "iconName": "icon-calendar",
        "key": "notifications",
        "notice": Object {}
      }
    }
  ]
]
`;

exports[`Pure functions suite test TopMenuData added IconProfile element to topMenuData 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "href": "#",
        "iconName": "icon-test",
        "key": "icon-test",
        "stringName": "My Profile"
      }
    },
    [Function IconProfile]
  ]
]
`;

exports[`Pure functions suite test TopMenuData added IconProfile element with divider to topMenuData 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "href": "#",
        "iconName": "icon-test",
        "key": "icon-test",
        "stringName": "My Profile"
      }
    },
    [Function IconProfile]
  ],
  Array [
    Object {
      "data": Object {
        "href": "#",
        "iconName": "icon-test",
        "key": "icon-test",
        "stringName": "My Profile"
      }
    },
    [Function IconProfile]
  ],
  Array [
    Object {
      "data": Object {
        "divider": true,
        "key": "divider1"
      }
    },
    [Function Divider]
  ]
]
`;

exports[`Pure functions suite test TopMenuData added UserIcon element to topMenuData 1`] = `
Object {
  "iconName": "icon-options-vertical",
  "imgLocation": "http://bit.ly/2cqW9ue",
  "stringName": "Alec Kerr"
}
`;

exports[`Pure functions suite test TopMenuData added header element to topMenuData 1`] = `
Array [
  Array [
    "tasks",
    Object {
      "data": Object {
        "actionMessage": "view all",
        "heading": "Notifications",
        "key": "tasks",
        "pending": 2,
        "subject": "Test"
      },
      "fn": [Function ActionDropDownHeader]
    }
  ],
  Array [
    "inbox",
    Object {
      "data": Object {
        "actionMessage": "view all",
        "heading": "Notifications",
        "key": "inbox",
        "pending": 2,
        "subject": "Test"
      },
      "fn": [Function ActionDropDownHeader]
    }
  ],
  Array [
    "notifications",
    Object {
      "data": Object {
        "actionMessage": "view all",
        "heading": "Notifications",
        "key": "notifications",
        "pending": 2,
        "subject": "Test"
      },
      "fn": [Function ActionDropDownHeader]
    }
  ]
]
`;

exports[`Pure functions suite test TopMenuData added inbox elements to topMenuData 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "imgLocation": "http://bit.ly/2cfaQ21",
        "key": "Alec kerr",
        "message": "This was made from a test file.",
        "sender": "Alec kerr",
        "time": "just now"
      }
    },
    [Function ActionDropDownInbox]
  ]
]
`;

exports[`Pure functions suite test TopMenuData added notification elements to topMenuData 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "iconName": "icon-plus",
        "key": "1icon-plus",
        "message": "This was made from a test file.",
        "time": "1 min"
      }
    },
    [Function ActionDropDownNotify]
  ]
]
`;

exports[`Pure functions suite test TopMenuData added task elements to topMenuData  1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "desc": "Metronic v1.1",
        "key": "Metronic v1.1",
        "percent": "10"
      }
    },
    [Function ActionDropDownTask]
  ]
]
`;

exports[`Pure functions suite test TopMenuData created correct icons 1`] = `
Array [
  Array [
    Object {
      "classStyles": Object {
        "aClassName": "dropdown-toggle",
        "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-task "
      },
      "data": Object {
        "actionDropDown": Object {
          "body": Array [
            Array [
              Object {
                "data": Object {
                  "desc": "Metronic v1.1",
                  "key": "Metronic v1.1",
                  "percent": "10"
                }
              },
              [Function ActionDropDownTask]
            ]
          ],
          "header": Array [
            Array [
              Object {
                "data": Object {
                  "actionMessage": "view all",
                  "heading": "Notifications",
                  "key": "tasks",
                  "pending": 1,
                  "subject": "Test"
                }
              },
              [Function ActionDropDownHeader]
            ]
          ]
        },
        "iconName": "icon-bell",
        "key": "tasks",
        "notice": Object {
          "notifyCount": 1
        }
      }
    },
    [Function Icon]
  ],
  Array [
    Object {
      "classStyles": Object {
        "aClassName": "dropdown-toggle",
        "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-inbox "
      },
      "data": Object {
        "actionDropDown": Object {
          "body": Array [
            Array [
              Object {
                "data": Object {
                  "imgLocation": "http://bit.ly/2cfaQ21",
                  "key": "Alec kerr",
                  "message": "This was made from a test file.",
                  "sender": "Alec kerr",
                  "time": "just now"
                }
              },
              [Function ActionDropDownInbox]
            ]
          ],
          "header": Array [
            Array [
              Object {
                "data": Object {
                  "actionMessage": "view all",
                  "heading": "Notifications",
                  "key": "inbox",
                  "pending": 1,
                  "subject": "Test"
                }
              },
              [Function ActionDropDownHeader]
            ]
          ]
        },
        "iconName": "icon-envelope-open",
        "key": "inbox",
        "notice": Object {
          "notifyCount": 1
        }
      }
    },
    [Function Icon]
  ],
  Array [
    Object {
      "classStyles": Object {
        "aClassName": "dropdown-toggle",
        "liClassName": "dropdown dropdown-extended nav-dropdown dropdown-notification"
      },
      "data": Object {
        "actionDropDown": Object {
          "body": Array [
            Array [
              Object {
                "data": Object {
                  "iconName": "icon-plus",
                  "key": "1icon-plus",
                  "message": "This was made from a test file.",
                  "time": "1 min"
                }
              },
              [Function ActionDropDownNotify]
            ]
          ],
          "header": Array [
            Array [
              Object {
                "data": Object {
                  "actionMessage": "view all",
                  "heading": "Notifications",
                  "key": "notifications",
                  "pending": 1,
                  "subject": "Test"
                }
              },
              [Function ActionDropDownHeader]
            ]
          ]
        },
        "iconName": "icon-calendar",
        "key": "notifications",
        "notice": Object {
          "notifyCount": 1
        }
      }
    },
    [Function Icon]
  ]
]
`;

exports[`Pure functions suite test TopMenuData returns correct ActionDropDown 1`] = `
Object {
  "body": Array [
    Array [
      Object {
        "data": Object {
          "imgLocation": "http://bit.ly/2cfaQ21",
          "key": "Alec kerr",
          "message": "This was made from a test file.",
          "sender": "Alec kerr",
          "time": "just now"
        }
      },
      [Function ActionDropDownInbox]
    ]
  ],
  "header": Array [
    Array [
      Object {
        "data": Object {
          "actionMessage": "view all",
          "heading": "Notifications",
          "key": "notifications",
          "pending": 1,
          "subject": "Test"
        }
      },
      [Function ActionDropDownHeader]
    ]
  ]
}
`;

exports[`Pure functions suite test TopMenuData returns new object data 1`] = `[Function TopMenuData]`;
